--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tacos Guitars</title>
+    <title>Taco's Guitars</title>
   </head>
   <body>
-    <header>
-      <!-- navbar -->
-    </header>
-    <div>
-      <!-- main-content -->
+    <div class="global-container">
+      <header>
+        <!-- navbar -->
+      </header>
+      <div>
+        <!-- main-content -->
+      </div>
+      <footer>
+        <!-- footer -->
+      </footer>
     </div>
-    <footer>
-      <!-- footer -->
-    </footer>
   </body>
 </html>
