--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   </head>
   <body>
     <header>
-      <!-- navbar -->
+      <h2>Taco's Guitars</h2>
+      <nav>
+        <ul>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="artists.html">Artists</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="dealers.html">Dealers</a></li>
+          <li><a href="support.html">Support</a></li>
+        </ul>
+      </nav>
     </header>
     <div>
       <!-- main-content -->
