adding background photo for index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       <!-- navbar -->
     </header>
     <div>
+    <img src="images/hero.jpg" >
+
+
+
       <!-- main-content -->
     </div>
     <footer>
