--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <div class="global-container">
+      <header>
+        <!-- navbar -->
+      </header>
+      <div>
+        <!-- main-content -->
+      </div>
+      <footer>
+        <!-- footer -->
+      </footer>
+    </div>
     <header>
       <h2>Taco's Guitars</h2>
       <nav>
@@ -61,7 +71,7 @@
       </div>
 
     </div>
+
 </footer>
-</div>
   </body>
 </html>
