changeg classes for guitars on product page, and added a wrapper

--- a/products.html
+++ b/products.html
@@ -20,85 +20,92 @@
       </nav>
     </header>
     <div class="main-content">
+      <div class="wrapper">
+        <div class="guitar1">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
 
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
+        <div class="guitar2">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
       </div>
 
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
+      <div class="wrapper">
+        <div class="guitar3">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
+
+        <div class="guitar4">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
       </div>
 
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
+      <div class="wrapper">
+        <div class="guitar5">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
+
+        <div class="guitar6">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
       </div>
 
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
-      </div>
+      <div class="wrapper">
+        <div class="guitar7">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
 
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
-      </div>
-
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
-      </div>
-
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
-      </div>
-
-      <div class="guitar">
-        <img src="">
-        <h2>Name</h2>
-        <ul class="guitar-items">
-          <li>Color:</li>
-          <li>Description:</li>
-          <li>Price:</li>
-        </ul>
+        <div class="guitar8">
+          <img src="">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
       </div>
 
     </div>
