--- a/support.html
+++ b/support.html
@@ -24,13 +24,14 @@
     </header>
     <div>
 
-<div class="my-div" style="color:#000000">
+<div class="my-div">
   <center>
-  <table cellpadding="25" border="0">
 
-  <tr><td>
-  <table border="0">
-  <tr><td> <h1>Guitar Tacos</h1></td></tr>
+  
+  
+   <h1>Guitar Tacos</h1>
+  <table cellpadding="25" border="0">
+   <table border="0">
   <tr><td>Address:</td><td>500 Interstate Blvd S #300, Nashville, TN 37210 <a href="https://www.google.com/maps/place/500+Interstate+Blvd+S+%23300,+Nashville,+TN+37210/@36.132796,-86.7587567,17z/data=!3m1!4b1!4m5!3m4!1s0x88646609ff279a6f:0x4f09d71163a8e804!8m2!3d36.132796!4d-86.756568" target="_blank" style="color:red">(map)</a></td></tr>
   <tr><td>Phone:</td><td><a href="tel:(615)838-8188">(615) 838-8188</a></td></tr>
 
