--- a/support.html
+++ b/support.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <div class="global-container">
+    <div id="global-container">
 
     <header>
       <h2>Taco's Guitars</h2>
@@ -35,7 +35,7 @@
   <tr><td>Phone:</td><td><a href="tel:(615)838-8188">(615) 838-8188</a></td></tr>
 
     <tr><td><strong><br>Store Hours<a></td><td></td></tr>
-    
+
 
     <tr><td>Monday:</td>   <td>9AM-11PM</td></tr>
    <tr><td>Tuesday:</td>   <td>9AM-4PM</td></tr>
@@ -79,7 +79,7 @@
 </center></strong></td></tr></table></td></tr></table></center></div>
 
 
-    
+
     <footer class="global_footer">
     <div class="pure-g connect_and_info">
       <div class="pure-u-1 pure-u-md-1-3">
