--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
+    <div id="global-container">
     <header>
       <h2>Taco's Guitars</h2>
       <nav>
@@ -62,5 +63,6 @@
     </div>
 
 </footer>
+</div>
   </body>
 </html>
