--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <div class="global-container">
+    <div id="global-container">
     <header>
       <h2>Taco's Guitars</h2>
       <nav>
