--- a/products.html
+++ b/products.html
@@ -21,8 +21,7 @@
     </header>
     <div class="main-content">
       <div class="wrapper">
-        <div class="guitar1">
-          <img src="">
+        <div class="card-container" id="guitar1">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
@@ -31,30 +30,7 @@
           </ul>
         </div>
 
-        <div class="guitar2">
-          <img src="">
-          <h2>Name</h2>
-          <ul class="guitar-items">
-            <li>Color:</li>
-            <li>Description:</li>
-            <li>Price:</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="wrapper">
-        <div class="guitar3">
-          <img src="">
-          <h2>Name</h2>
-          <ul class="guitar-items">
-            <li>Color:</li>
-            <li>Description:</li>
-            <li>Price:</li>
-          </ul>
-        </div>
-
-        <div class="guitar4">
-          <img src="">
+        <div class="card-article" id="guitar2">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
@@ -65,8 +41,7 @@
       </div>
 
       <div class="wrapper">
-        <div class="guitar5">
-          <img src="">
+        <div class="card-container" id="guitar3">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
@@ -75,8 +50,7 @@
           </ul>
         </div>
 
-        <div class="guitar6">
-          <img src="">
+        <div class="card-container" id="guitar4">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
@@ -87,8 +61,7 @@
       </div>
 
       <div class="wrapper">
-        <div class="guitar7">
-          <img src="">
+        <div class="card-container" id="guitar5">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
@@ -97,8 +70,27 @@
           </ul>
         </div>
 
-        <div class="guitar8">
-          <img src="">
+        <div class="card-container" id="guitar6">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="card-container" id="guitar7">
+          <h2>Name</h2>
+          <ul class="guitar-items">
+            <li>Color:</li>
+            <li>Description:</li>
+            <li>Price:</li>
+          </ul>
+        </div>
+
+        <div class="card-container" id="guitar8">
           <h2>Name</h2>
           <ul class="guitar-items">
             <li>Color:</li>
