--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="global-container">
     <header>
-      <h2>Taco's Guitars</h2>
+      <h2><a href="index.html">Taco's Guitars</a></h2>
       <nav>
         <ul>
           <li><a href="products.html">Products</a></li>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <div>
-    <img src="images/hero.jpg" >
+    <img src="images/hero.jpg" class="hero">
 
 
 
