added the class main-content to divs

--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
         </ul>
       </nav>
     </header>
-    <div>
-    <img src="images/hero.jpg" >
-
-
-
-      <!-- main-content -->
+    <div class="main-content">
+      <!--main content here-->
     </div>
     <footer class="global_footer">
 
