--- a/artists.html
+++ b/artists.html
@@ -8,7 +8,7 @@
   <body>
     <div id="global-container">
     <header>
-      <h2>Taco's Guitars</h2>
+      <h2><a href="index.html">Taco's Guitars</a></h2>
       <nav>
         <ul>
           <li><a href="products.html">Products</a></li>
