--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
     <div id="global-container">
 
     <header>
-      <h2>Taco's Guitars</h2>
+      <h2><a href="index.html">Taco's Guitars</a></h2>
       <nav>
         <ul>
           <li><a href="products.html">Products</a></li>
@@ -24,7 +24,7 @@
     </header>
     <div>
 
-<div class="my-div" 
+<div class="my-div"
   <center>
   <table cellpadding="25" border="0">
 
