content for dealer page

--- a/dealers.html
+++ b/dealers.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Taco's Guitars</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/dealer.css">
   </head>
   <body>
     <div id="global-container">
@@ -20,7 +21,80 @@
       </nav>
     </header>
     <div class="main-content">
+      <div class="sig-dealer-container">
+        <h2 class="dealer-heading">Signature Dealers</h2>
+          <p>Our dealers carry a full line of Taco's Guitars. From our signature series, pro-line, to our standard models...find them here. These guitars want to kill your mama!</p>
+            <div class="dealer-list">
+              <div class="column1">
+                <ul>
+                  <li class="dealername">American Musical Supply</li>
+                  <li class="dealersite"><a href="www.americanmusical.com">americanmusical.com</li>
+                  <li class="dealerlocation">Oakland, NJ</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Chicago Music Exchange</li>
+                  <li class="dealersite"><a href="www.chicagomusicexchange.com"></li>
+                  <li class="dealerlocation">Chicago, IL</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Eddie's Guitars</li>
+                  <li class="dealersite"><a href="eddiesguitars.com"></li>
+                  <li class="dealerlocation">St Louis, MO</li>
+                </ul>
+                <ul>
+                  <li class="dealername">The Guitar Sanctuary</li>
+                  <li class="dealersite"><a href="www.theguitarsanctuary.com"></li>
+                  <li class="dealerlocation">McKinney, TX</li>
+                </ul>
+              </div>
 
+              <div class="column2">
+                <ul>
+                  <li class="dealername">The Guitar Store</li>
+                  <li class="dealersite"><a href="www.seattleguitarstore.com"></li>
+                  <li class="dealerlocation">Seatlle, WA</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Ish Guitars</li>
+                  <li class="dealersite"><a href="www.ish.guitars"></li>
+                  <li class="dealerlocation">Syracuse, NY</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Lark Guitars</li>
+                  <li class="dealersite"><a href="www.larkguitars.com"></li>
+                  <li class="dealerlocation">San Antonio, TX</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Martin Music</li>
+                  <li class="dealersite"><a href="www.martinmusicguitar.com"></li>
+                  <li class="dealerlocation">Memphis, TN</li>
+                </ul>
+              </div>
+
+              <div class="column3">
+                <ul>
+                  <li class="dealername">Sam Ash Music</li>
+                  <li class="dealersite"><a href="www.samash.com"></li>
+                  <li class="dealerlocation">New York, NY</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Sweetwater Sound</li>
+                  <li class="dealersite"><a href="www.sweetwater.com"></li>
+                  <li class="dealerlocation">Fort Wayne, IN</li>
+                </ul>
+                <ul>
+                  <li class="dealername">Wild West Guitars</li>
+                  <li class="dealersite"><a href="www.wildwestguitars.com"></li>
+                  <li class="dealerlocation">Riverside, CA</li>
+                </ul>
+                <ul>
+                  <li class="dealername">zZounds</li>
+                  <li class="dealersite"><a href="www.zzounds.com"></li>
+                  <li class="dealerlocation">Oakland, NJ</li>
+                </ul>
+              </div>
+            </div>
+      </div>
 
 
     </div>
