first version artists page

--- a/artists.html
+++ b/artists.html
@@ -19,13 +19,26 @@
         </ul>
       </nav>
     </header>
+
     <div>
     <img src="images/hero.jpg" >
-
-
-
       <!-- main-content -->
     </div>
+    <div class="artists-section">
+
+    <h2> Artists </h2>
+        <section>
+        <img src="http://www.prsguitars.com/images/artistimages/carlos_santana_signature.jpg" style="width:396px;height:396px;">
+        <img src="https://s-media-cache-ak0.pinimg.com/originals/75/80/b2/7580b2868bf2a7e52681391c2f02eee7.jpg" style="width:396px;height:396px;">
+        <img src="http://www1.pictures.gi.zimbio.com/MUSIC+Tour+Lil+Wayne+Special+Guests+NQsE4LTH6lhl.jpg" style="width:396px;height:396px;">
+        <img src="http://1.bp.blogspot.com/-5OYBcIU8INM/USLabny-MgI/AAAAAAAAD3E/vQPe4KRVhEg/s640/beyonce-super-bowl-pictures-meme-guitar-playing.jpg" style="width:396px;height:396px;">
+        <img src="https://sound-images.s3.amazonaws.com/images/2016/rememberingprince_web.jpg" style="width:396px;height:396px;">
+        <img src="https://s-media-cache-ak0.pinimg.com/564x/68/9f/a4/689fa4436dc91769886a855ed3dfd828.jpg" style="width:396px;height:396px;">
+
+
+      </section>
+    </div>
+
     <footer class="global_footer">
 
     <div class="pure-g connect_and_info">
