--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Taco's Guitars</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/products.css">
   </head>
   <body>
     <div id="global-container">
