--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Taco's Guitars</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
   </head>
   <body>
     <div id="global-container">
@@ -20,11 +21,29 @@
       </nav>
     </header>
     <div class="main-content">
-    <img src="images/hero.jpg" >
-
-
-
-      <!-- main-content -->
+      <div class="about-hero">
+        <h2>About Taco's Guitars</h2>
+        <h4>Mission Statement | Careers | Our Story</h3>
+      </div>
+      <div class="mission-statement">
+        <img src="images/guitarz.jpg" class="hero">
+        <h3>Mission Statement</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
+      </div>
+      <div class="careers">
+        <h3>Careers</h3>
+        <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. </p>
+        <h4>Career Openings</h4>
+        <ul>
+          <li>Production Sander - Entry Level - Posted 4/5/17</li>
+          <li>SE Shipment Inspector - Entry Level - Posted 4/13/17</li>
+        </ul>
+        <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
+      </div>
+      <div class="our-story">
+        <h3>Our Story</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+      </div>
     </div>
     <footer class="global_footer">
 
