final changes to dealer html and css

--- a/dealers.html
+++ b/dealers.html
@@ -21,75 +21,75 @@
       </nav>
     </header>
     <div class="main-content">
-      <div class="sig-dealer-container">
+      <div class="dealer-container">
         <h2 class="dealer-heading">Signature Dealers</h2>
           <p>Our dealers carry a full line of Taco's Guitars. From our signature series, pro-line, to our standard models...find them here. These guitars want to kill your mama!</p>
             <div class="dealer-list">
               <div class="column1">
                 <ul>
-                  <li class="dealername">American Musical Supply</li>
-                  <li class="dealersite"><a href="www.americanmusical.com">americanmusical.com</li>
-                  <li class="dealerlocation">Oakland, NJ</li>
+                  <li class="dealername">American Musical Supply</li><br>
+                  <li class="dealersite"><a href="http://www.americanmusical.com">americanmusical.com</a></li><br>
+                  <li class="dealerlocation">Oakland, NJ</li><br>
                 </ul>
                 <ul>
-                  <li class="dealername">Chicago Music Exchange</li>
-                  <li class="dealersite"><a href="www.chicagomusicexchange.com"></li>
+                  <li class="dealername">Chicago Music Exchange</li><br>
+                  <li class="dealersite"><a href="http://www.chicagomusicexchange.com">www.chicagomusicexchange.com</a></li><br>
                   <li class="dealerlocation">Chicago, IL</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Eddie's Guitars</li>
-                  <li class="dealersite"><a href="eddiesguitars.com"></li>
+                  <li class="dealername">Eddie's Guitars</li><br>
+                  <li class="dealersite"><a href="http://www.eddiesguitars.com">eddiesguitars.com</a></li><br>
                   <li class="dealerlocation">St Louis, MO</li>
                 </ul>
                 <ul>
-                  <li class="dealername">The Guitar Sanctuary</li>
-                  <li class="dealersite"><a href="www.theguitarsanctuary.com"></li>
+                  <li class="dealername">The Guitar Sanctuary</li><br>
+                  <li class="dealersite"><a href="http://www.theguitarsanctuary.com">www.theguitarsanctuary.com</a></li><br>
                   <li class="dealerlocation">McKinney, TX</li>
                 </ul>
               </div>
 
               <div class="column2">
                 <ul>
-                  <li class="dealername">The Guitar Store</li>
-                  <li class="dealersite"><a href="www.seattleguitarstore.com"></li>
+                  <li class="dealername">The Guitar Store</li><br>
+                  <li class="dealersite"><a href="http://www.seattleguitarstore.com">www.seattleguitarstore.com</a></li><br>
                   <li class="dealerlocation">Seatlle, WA</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Ish Guitars</li>
-                  <li class="dealersite"><a href="www.ish.guitars"></li>
+                  <li class="dealername">Ish Guitars</li><br>
+                  <li class="dealersite"><a href="http://www.ish.guitars">www.ish.guitars</a></li><br>
                   <li class="dealerlocation">Syracuse, NY</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Lark Guitars</li>
-                  <li class="dealersite"><a href="www.larkguitars.com"></li>
+                  <li class="dealername">Lark Guitars</li><br>
+                  <li class="dealersite"><a href="http://www.larkguitars.com">www.larkguitars.com</a></li><br>
                   <li class="dealerlocation">San Antonio, TX</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Martin Music</li>
-                  <li class="dealersite"><a href="www.martinmusicguitar.com"></li>
+                  <li class="dealername">Martin Music</li><br>
+                  <li class="dealersite"><a href="http://www.martinmusicguitar.com">www.martinmusicguitar.com</a></li><br>
                   <li class="dealerlocation">Memphis, TN</li>
                 </ul>
               </div>
 
               <div class="column3">
                 <ul>
-                  <li class="dealername">Sam Ash Music</li>
-                  <li class="dealersite"><a href="www.samash.com"></li>
+                  <li class="dealername">Sam Ash Music</li><br>
+                  <li class="dealersite"><a href="http://www.samash.com">www.samash.com</a></li><br>
                   <li class="dealerlocation">New York, NY</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Sweetwater Sound</li>
-                  <li class="dealersite"><a href="www.sweetwater.com"></li>
+                  <li class="dealername">Sweetwater Sound</li><br>
+                  <li class="dealersite"><a href="http://www.sweetwater.com">www.sweetwater.com</a></li><br>
                   <li class="dealerlocation">Fort Wayne, IN</li>
                 </ul>
                 <ul>
-                  <li class="dealername">Wild West Guitars</li>
-                  <li class="dealersite"><a href="www.wildwestguitars.com"></li>
+                  <li class="dealername">Wild West Guitars</li><br>
+                  <li class="dealersite"><a href="http://www.wildwestguitars.com">www.wildwestguitars.com</a></li><br>
                   <li class="dealerlocation">Riverside, CA</li>
                 </ul>
                 <ul>
-                  <li class="dealername">zZounds</li>
-                  <li class="dealersite"><a href="www.zzounds.com"></li>
+                  <li class="dealername">zZounds</li><br>
+                  <li class="dealersite"><a href="http://www.zzounds.com">www.zzounds.com</a></li><br>
                   <li class="dealerlocation">Oakland, NJ</li>
                 </ul>
               </div>
